[gd_scene load_steps=23 format=3 uid="uid://dtyqm35g18wg4"]

[ext_resource type="Script" path="res://Scripts/Player/Player_Controller.gd" id="1_jhext"]
[ext_resource type="Script" path="res://Scripts/Player/Hand_Controller.gd" id="3_4bf5b"]
[ext_resource type="PackedScene" uid="uid://c7tx5do8av2lf" path="res://Prefabs/Systems/health_controller.tscn" id="4_ag43d"]
[ext_resource type="PackedScene" uid="uid://cjyl78b8oqo5a" path="res://Prefabs/Player/Extractor_Tool.tscn" id="5_bjpnc"]
[ext_resource type="Script" path="res://Scripts/Systems/Managers/Interface_Manager.gd" id="6_glq1p"]
[ext_resource type="Texture2D" uid="uid://cdg1rijy4ybsd" path="res://Textures/UI/Wood Log.png" id="6_jlrom"]
[ext_resource type="Script" path="res://Scripts/UI/Materials_Manager.gd" id="6_oplyg"]
[ext_resource type="Texture2D" uid="uid://cwno4oyo5aq0g" path="res://Textures/UI/Iron.png" id="7_fc8pl"]
[ext_resource type="Script" path="res://Scripts/Player/Mouse_Area_2d.gd" id="7_uq8yo"]
[ext_resource type="Texture2D" uid="uid://ba04tjiq47c23" path="res://Textures/UI/Copper.png" id="8_bs4n8"]
[ext_resource type="Script" path="res://Scripts/UI/PopupManager.gd" id="8_r3hhy"]
[ext_resource type="Texture2D" uid="uid://j2n5cq8etnjh" path="res://Textures/UI/Cristal.png" id="9_5p1bq"]
[ext_resource type="PackedScene" uid="uid://buyu3haltyjpm" path="res://Prefabs/Player/Material_Popup.tscn" id="9_w3rbo"]
[ext_resource type="Script" path="res://Scripts/UI/Phase_Controller.gd" id="13_vqwf6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6k3mc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dbldf"]
height = 1.95554

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gh1a7"]
bg_color = Color(0.297607, 0.308817, 0.318345, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5wdt8"]
bg_color = Color(1, 0.694118, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p44d7"]
bg_color = Color(0.960784, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_0f6ym"]
subpixel_positioning = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1aym3"]
size = Vector2(4792, 138)

[sub_resource type="CircleShape2D" id="CircleShape2D_gs6gc"]
radius = 2.0

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("camera") groups=["Player"]]
script = ExtResource("1_jhext")
AIM_SPEED = 5
MAX_JETPACK_HEIGHT = 4.0
JETPACK_TIME = 3.0
JETPACK_MAX_ABSOLUTE_Y = 8.0
camera = NodePath("CamNode/SpringArm3D/Camera3D")
max_y_angle_deg = -10.0

[node name="PlayerMesh" type="Node3D" parent="."]

[node name="Mesh" type="Node3D" parent="PlayerMesh"]
transform = Transform3D(-1.5, 0, -1.31134e-07, 0, 1.5, 0, 1.31134e-07, 0, -1.5, 0, 0, 0)

[node name="weapon_holder" type="Node3D" parent="PlayerMesh"]
script = ExtResource("3_4bf5b")

[node name="Extractor_Tool" parent="PlayerMesh/weapon_holder" instance=ExtResource("5_bjpnc")]
visible = false

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_6k3mc")

[node name="Hitbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1.10651, 0, 0, 0, 1.10651, 0, 0, 0, 1.10651, 0, 1.00559, 0)
shape = SubResource("CapsuleShape3D_dbldf")

[node name="CamNode" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.68307, 0.730354, 0, -0.730354, 0.68307, 0, 1.53635, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CamNode"]
transform = Transform3D(1, 0, 0, 0, 0.999848, -0.0174524, 0, 0.0174524, 0.999848, 0, 0, 0)
collision_mask = 4
spring_length = 18.0
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="CamNode/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8)
fov = 60.0

[node name="HealthController" parent="." instance=ExtResource("4_ag43d")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Jetpack_Bar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 53.0
offset_top = -119.0
offset_right = 395.0
offset_bottom = -92.0
grow_vertical = 0
rotation = -1.57079
scale = Vector2(0.5, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_gh1a7")
theme_override_styles/fill = SubResource("StyleBoxFlat_5wdt8")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Health_bar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -61.0
offset_right = 372.0
offset_bottom = -34.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_gh1a7")
theme_override_styles/fill = SubResource("StyleBoxFlat_p44d7")
value = 100.0
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Health_bar"]
layout_mode = 0
offset_left = 5.0
offset_top = -36.0
offset_right = 197.0
offset_bottom = -5.0
theme_override_fonts/normal_font = SubResource("SystemFont_0f6ym")
theme_override_font_sizes/normal_font_size = 22
text = "Health
"
metadata/_edit_use_anchors_ = true

[node name="Materials" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -66.0
offset_top = 6.0
offset_right = -66.0
offset_bottom = 6.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("6_oplyg")

[node name="Wood" type="Control" parent="CanvasLayer/Materials"]
layout_mode = 3
anchors_preset = 0
offset_left = -30.0
offset_top = 28.0
offset_right = 10.0
offset_bottom = 68.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Materials/Wood"]
position = Vector2(20, 10)
texture = ExtResource("6_jlrom")

[node name="Amount" type="RichTextLabel" parent="CanvasLayer/Materials/Wood"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 46.0
offset_top = -1.0
offset_right = 82.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
autowrap_mode = 0

[node name="Iron" type="Control" parent="CanvasLayer/Materials"]
layout_mode = 3
anchors_preset = 0
offset_left = -30.0
offset_top = 62.0
offset_right = 10.0
offset_bottom = 102.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Materials/Iron"]
position = Vector2(20, 9)
texture = ExtResource("7_fc8pl")

[node name="Amount" type="RichTextLabel" parent="CanvasLayer/Materials/Iron"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 46.0
offset_top = -1.0
offset_right = 82.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
autowrap_mode = 0

[node name="Copper" type="Control" parent="CanvasLayer/Materials"]
layout_mode = 3
anchors_preset = 0
offset_left = -30.0
offset_top = 94.0
offset_right = 10.0
offset_bottom = 134.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Materials/Copper"]
position = Vector2(20, 10)
texture = ExtResource("8_bs4n8")

[node name="Amount" type="RichTextLabel" parent="CanvasLayer/Materials/Copper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 46.0
offset_top = -1.0
offset_right = 82.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
autowrap_mode = 0

[node name="Cristal" type="Control" parent="CanvasLayer/Materials"]
layout_mode = 3
anchors_preset = 0
offset_left = -30.0
offset_top = 126.0
offset_right = 10.0
offset_bottom = 166.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Materials/Cristal"]
position = Vector2(20, 11)
texture = ExtResource("9_5p1bq")

[node name="Amount" type="RichTextLabel" parent="CanvasLayer/Materials/Cristal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 46.0
offset_top = -1.0
offset_right = 82.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
autowrap_mode = 0

[node name="Mat_PopUp_Controller" type="Control" parent="CanvasLayer" node_paths=PackedStringArray("popup_spawn_point")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -20.0
offset_right = 53.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_r3hhy")
popup_scene = ExtResource("9_w3rbo")
popup_spawn_point = NodePath("Node2D")

[node name="Node2D" type="Node2D" parent="CanvasLayer/Mat_PopUp_Controller"]
position = Vector2(28, 19)

[node name="Building_Buttons" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 96.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 10
script = ExtResource("6_glq1p")

[node name="Panel" type="Panel" parent="CanvasLayer/Building_Buttons"]
modulate = Color(1, 1, 1, 0.47451)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.19283)

[node name="BtnBuildConveyLine" type="Button" parent="CanvasLayer/Building_Buttons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -361.0
offset_top = 16.0
offset_right = -234.0
offset_bottom = 88.0
grow_horizontal = 2
text = "Cinta 
transportadora"

[node name="BtnBuildExtractor" type="Button" parent="CanvasLayer/Building_Buttons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -217.0
offset_top = 16.0
offset_right = -103.0
offset_bottom = 88.0
grow_horizontal = 2
text = "Extractor"

[node name="BtnBuildFurnace" type="Button" parent="CanvasLayer/Building_Buttons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.0
offset_top = 16.0
offset_right = 11.0
offset_bottom = 88.0
grow_horizontal = 2
text = "Horno"

[node name="BtnBuildSteelRefinery" type="Button" parent="CanvasLayer/Building_Buttons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 28.0
offset_top = 16.0
offset_right = 123.0
offset_bottom = 88.0
grow_horizontal = 2
text = "Refineria 
de Acero"

[node name="BtnBuildChipsFactory" type="Button" parent="CanvasLayer/Building_Buttons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 261.0
offset_top = 16.0
offset_right = 356.0
offset_bottom = 88.0
grow_horizontal = 2
text = "Fabrica
de chips"

[node name="BtnBuildPlatesFactory" type="Button" parent="CanvasLayer/Building_Buttons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 144.0
offset_top = 16.0
offset_right = 239.0
offset_bottom = 88.0
grow_horizontal = 2
text = "Fabrica de 
placas"

[node name="Area2D2" type="Area2D" parent="CanvasLayer/Building_Buttons"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Building_Buttons/Area2D2"]
position = Vector2(574, 61)
shape = SubResource("RectangleShape2D_1aym3")

[node name="Materials_Needed" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = 60.0
offset_right = 98.0
offset_bottom = 353.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 8
bbcode_enabled = true
autowrap_mode = 1

[node name="Phase_Controller" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_left = 1.0
anchor_top = 0.373
anchor_right = 1.0
anchor_bottom = 0.373
offset_left = -198.0
offset_top = -55.704
offset_right = -14.0
offset_bottom = 89.296
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("13_vqwf6")

[node name="Panel" type="Panel" parent="CanvasLayer/Phase_Controller"]
modulate = Color(1, 1, 1, 0.47451)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Phase_Controller"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 7.0
offset_right = -6.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("7_uq8yo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(595, 3)
shape = SubResource("CircleShape2D_gs6gc")

[connection signal="button_down" from="CanvasLayer/Building_Buttons/BtnBuildConveyLine" to="CanvasLayer/Building_Buttons" method="_on_btn_build_convey_merger_button_down"]
[connection signal="button_down" from="CanvasLayer/Building_Buttons/BtnBuildExtractor" to="CanvasLayer/Building_Buttons" method="_on_btn_build_extractor_button_down"]
[connection signal="button_down" from="CanvasLayer/Building_Buttons/BtnBuildFurnace" to="CanvasLayer/Building_Buttons" method="_on_btn_build_furnace_button_down"]
[connection signal="button_down" from="CanvasLayer/Building_Buttons/BtnBuildSteelRefinery" to="CanvasLayer/Building_Buttons" method="_on_btn_build_steel_refinery_button_down"]
[connection signal="button_down" from="CanvasLayer/Building_Buttons/BtnBuildChipsFactory" to="CanvasLayer/Building_Buttons" method="_on_btn_build_chips_factory_button_down"]
[connection signal="button_down" from="CanvasLayer/Building_Buttons/BtnBuildPlatesFactory" to="CanvasLayer/Building_Buttons" method="_on_btn_build_plates_factory_button_down"]
[connection signal="area_entered" from="CanvasLayer/Building_Buttons/Area2D2" to="CanvasLayer/Building_Buttons" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="CanvasLayer/Building_Buttons/Area2D2" to="CanvasLayer/Building_Buttons" method="_on_area_2d_area_exited"]
